--- a/src/blocks/modules/unknown/unknown.html
+++ b/src/blocks/modules/unknown/unknown.html
@@ -15,6 +15,39 @@
                     <div class="swiper-slide">
                         <a href="#0" class="js-unknown-slide">
                             <picture>
+                                <source srcset="img/unknown-1-1.webp" type="image/webp">
+                                <img src="img/unknown-1-1.jpg" alt="image_alt">
+                            </picture>
+                        </a>
+                    </div>
+                    <div class="swiper-slide">
+                        <a href="#0" class="js-unknown-slide">
+                            <picture>
+                                <source srcset="img/unknown-1-1.webp" type="image/webp">
+                                <img src="img/unknown-1-1.jpg" alt="image_alt">
+                            </picture>
+                        </a>
+                    </div>
+                    <div class="swiper-slide">
+                        <a href="#0" class="js-unknown-slide">
+                            <picture>
+                                <source srcset="img/unknown-1-1.webp" type="image/webp">
+                                <img src="img/unknown-1-1.jpg" alt="image_alt">
+                            </picture>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="swiper-button swiper-button-prev"></div>
+            <div class="swiper-button swiper-button-next"></div>
+        </div>
+
+        <div class="unknown">
+            <div class="unknown-slider swiper-container js-unknown">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <a href="#0" class="js-unknown-slide">
+                            <picture>
                                 <source srcset="img/unknown-2-1.webp" type="image/webp">
                                 <img src="img/unknown-2-1.jpg" alt="image_alt">
                             </picture>
@@ -23,6 +56,14 @@
                     <div class="swiper-slide">
                         <a href="#0" class="js-unknown-slide">
                             <picture>
+                                <source srcset="img/unknown-1-1.webp" type="image/webp">
+                                <img src="img/unknown-1-1.jpg" alt="image_alt">
+                            </picture>
+                        </a>
+                    </div>
+                    <div class="swiper-slide">
+                        <a href="#0" class="js-unknown-slide">
+                            <picture>
                                 <source srcset="img/unknown-2-1.webp" type="image/webp">
                                 <img src="img/unknown-2-1.jpg" alt="image_alt">
                             </picture>
@@ -39,16 +80,8 @@
                     <div class="swiper-slide">
                         <a href="#0" class="js-unknown-slide">
                             <picture>
-                                <source srcset="img/unknown-1-1.webp" type="image/webp">
-                                <img src="img/unknown-1-1.jpg" alt="image_alt">
-                            </picture>
-                        </a>
-                    </div>
-                    <div class="swiper-slide">
-                        <a href="#0" class="js-unknown-slide">
-                            <picture>
-                                <source srcset="img/unknown-1-1.webp" type="image/webp">
-                                <img src="img/unknown-1-1.jpg" alt="image_alt">
+                                <source srcset="img/unknown-2-1.webp" type="image/webp">
+                                <img src="img/unknown-2-1.jpg" alt="image_alt">
                             </picture>
                         </a>
                     </div>
@@ -88,6 +121,14 @@
                     <div class="swiper-slide">
                         <a href="#0" class="js-unknown-slide">
                             <picture>
+                                <source srcset="img/unknown-1-1.webp" type="image/webp">
+                                <img src="img/unknown-1-1.jpg" alt="image_alt">
+                            </picture>
+                        </a>
+                    </div>
+                    <div class="swiper-slide">
+                        <a href="#0" class="js-unknown-slide">
+                            <picture>
                                 <source srcset="img/unknown-2-1.webp" type="image/webp">
                                 <img src="img/unknown-2-1.jpg" alt="image_alt">
                             </picture>
@@ -104,24 +145,8 @@
                     <div class="swiper-slide">
                         <a href="#0" class="js-unknown-slide">
                             <picture>
-                                <source srcset="img/unknown-1-1.webp" type="image/webp">
-                                <img src="img/unknown-1-1.jpg" alt="image_alt">
-                            </picture>
-                        </a>
-                    </div>
-                    <div class="swiper-slide">
-                        <a href="#0" class="js-unknown-slide">
-                            <picture>
-                                <source srcset="img/unknown-1-1.webp" type="image/webp">
-                                <img src="img/unknown-1-1.jpg" alt="image_alt">
-                            </picture>
-                        </a>
-                    </div>
-                    <div class="swiper-slide">
-                        <a href="#0" class="js-unknown-slide">
-                            <picture>
-                                <source srcset="img/unknown-1-1.webp" type="image/webp">
-                                <img src="img/unknown-1-1.jpg" alt="image_alt">
+                                <source srcset="img/unknown-2-1.webp" type="image/webp">
+                                <img src="img/unknown-2-1.jpg" alt="image_alt">
                             </picture>
                         </a>
                     </div>
@@ -129,64 +154,48 @@
             </div>
             <div class="swiper-button swiper-button-prev"></div>
             <div class="swiper-button swiper-button-next"></div>
-        </div>
+        </div
 
-        <div class="unknown">
+        ><div class="unknown">
             <div class="unknown-slider swiper-container js-unknown">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <a href="#0" class="js-unknown-slide">
                             <picture>
-                                <source srcset="img/unknown-1-1.webp" type="image/webp">
-                                <img src="img/unknown-1-1.jpg" alt="image_alt">
+                                <source srcset="img/img-6-col.webp" type="image/webp">
+                                <img src="img/img-6-col.png" alt="image_alt">
                             </picture>
                         </a>
                     </div>
                     <div class="swiper-slide">
                         <a href="#0" class="js-unknown-slide">
                             <picture>
-                                <source srcset="img/unknown-2-1.webp" type="image/webp">
-                                <img src="img/unknown-2-1.jpg" alt="image_alt">
+                                <source srcset="img/img-6-col.webp" type="image/webp">
+                                <img src="img/img-6-col.png" alt="image_alt">
                             </picture>
                         </a>
                     </div>
                     <div class="swiper-slide">
                         <a href="#0" class="js-unknown-slide">
                             <picture>
-                                <source srcset="img/unknown-2-1.webp" type="image/webp">
-                                <img src="img/unknown-2-1.jpg" alt="image_alt">
+                                <source srcset="img/img-6-col.webp" type="image/webp">
+                                <img src="img/img-6-col.png" alt="image_alt">
                             </picture>
                         </a>
                     </div>
                     <div class="swiper-slide">
                         <a href="#0" class="js-unknown-slide">
                             <picture>
-                                <source srcset="img/unknown-1-1.webp" type="image/webp">
-                                <img src="img/unknown-1-1.jpg" alt="image_alt">
+                                <source srcset="img/img-6-col.webp" type="image/webp">
+                                <img src="img/img-6-col.png" alt="image_alt">
                             </picture>
                         </a>
                     </div>
                     <div class="swiper-slide">
                         <a href="#0" class="js-unknown-slide">
                             <picture>
-                                <source srcset="img/unknown-1-1.webp" type="image/webp">
-                                <img src="img/unknown-1-1.jpg" alt="image_alt">
-                            </picture>
-                        </a>
-                    </div>
-                    <div class="swiper-slide">
-                        <a href="#0" class="js-unknown-slide">
-                            <picture>
-                                <source srcset="img/unknown-1-1.webp" type="image/webp">
-                                <img src="img/unknown-1-1.jpg" alt="image_alt">
-                            </picture>
-                        </a>
-                    </div>
-                    <div class="swiper-slide">
-                        <a href="#0" class="js-unknown-slide">
-                            <picture>
-                                <source srcset="img/unknown-1-1.webp" type="image/webp">
-                                <img src="img/unknown-1-1.jpg" alt="image_alt">
+                                <source srcset="img/img-6-col.webp" type="image/webp">
+                                <img src="img/img-6-col.png" alt="image_alt">
                             </picture>
                         </a>
                     </div>
