add header-search.html 2

--- a/src/blocks/modules/header-search/header-search.html
+++ b/src/blocks/modules/header-search/header-search.html
@@ -215,6 +215,12 @@
                                 </ul>
                         </div>
                         <!--Результаты поиска конец-->
+
+                        <!--если нет результатов -->
+                        <div class="search-suggest__no-result">
+                            Ничего не найдено
+                        </div>
+                        <!--если нет результатов конец-->
                     </div>
                 </div>
             </div>
