--- a/src/blocks/modules/universal-form/universal-form.html
+++ b/src/blocks/modules/universal-form/universal-form.html
@@ -40,7 +40,7 @@
             <label class="drop-file__area">
                 <input type="file" multiple class="drop-file__input"  id="fileUploud">
                 <span class="drop-file__header">
-                    <button class="btn btn--secondary trigger-file-js"><i class="btn__icon icon--screp btn__icon--left"></i> Прикрепите закрывающие документы</button>
+                    <button class="btn btn--secondary trigger-file-js"><i class="btn__icon icon--screp btn__icon--left"></i> <span class="pc">Прикрепите закрывающие документы</span><span class="mob">Документ на отгрузку</span></button>
                     <span>или перетащите сюда</span>
                 </span>
             </label>
