fix opechatka, add modifier

--- a/src/blocks/modules/comments/comments.html
+++ b/src/blocks/modules/comments/comments.html
@@ -2,12 +2,12 @@
     <div class="comments__header">
         <h2>Комментарии<span>32</span></h2>
     </div>
-    <div class="comments__massage">
-        <form action="" class="comments__massage-form">
+    <div class="comments__message">
+        <form action="" class="comments__message-form">
             <label class="fields">
-                <textarea class="fields__input comments__massage-form-input" placeholder="Напишите комментарий"cols="30" rows="6"></textarea>
-                <div class="comments__massage-form-buffer"></div>
-                <button type="submit" title="Отправить" class="comments__massage-form-submit"><i
+                <textarea class="fields__input comments__message-form-input" placeholder="Напишите комментарий"cols="30" rows="6"></textarea>
+                <div class="comments__message-form-buffer"></div>
+                <button type="submit" title="Отправить" class="comments__message-form-submit"><i
                         class="icon icon--message-submit"></i></button>
             </label>
 
@@ -50,12 +50,12 @@
                     </div>
                 </div>
             </div>
-            <div class="comments__massage">
-                <form action="" class="comments__massage-form">
+            <div class="comments__message">
+                <form action="" class="comments__message-form">
                     <label class="fields">
-                <textarea class="fields__input comments__massage-form-input" placeholder="Напишите комментарий" cols="30" rows="6"></textarea>
-                        <div class="comments__massage-form-buffer"></div>
-                        <button type="submit" title="Отправить" class="comments__massage-form-submit"><i
+                <textarea class="fields__input comments__message-form-input" placeholder="Напишите комментарий" cols="30" rows="6"></textarea>
+                        <div class="comments__message-form-buffer"></div>
+                        <button type="submit" title="Отправить" class="comments__message-form-submit"><i
                                 class="icon icon--message-submit"></i></button>
                     </label>
 
@@ -99,12 +99,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="comments__massage">
-                        <form action="" class="comments__massage-form">
+                    <div class="comments__message">
+                        <form action="" class="comments__message-form">
                             <label class="fields">
-                <textarea class="fields__input comments__massage-form-input" placeholder="Напишите комментарий"   cols="30" rows="6"></textarea>
-                                <div class="comments__massage-form-buffer"></div>
-                                <button type="submit" title="Отправить" class="comments__massage-form-submit"><i
+                <textarea class="fields__input comments__message-form-input" placeholder="Напишите комментарий"   cols="30" rows="6"></textarea>
+                                <div class="comments__message-form-buffer"></div>
+                                <button type="submit" title="Отправить" class="comments__message-form-submit"><i
                                         class="icon icon--message-submit"></i></button>
                             </label>
 
@@ -146,12 +146,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="comments__massage">
-                        <form action="" class="comments__massage-form">
+                    <div class="comments__message">
+                        <form action="" class="comments__message-form">
                             <label class="fields">
-                <textarea class="fields__input comments__massage-form-input" placeholder="Напишите комментарий"   cols="30" rows="6"></textarea>
-                                <div class="comments__massage-form-buffer"></div>
-                                <button type="submit" title="Отправить" class="comments__massage-form-submit"><i
+                <textarea class="fields__input comments__message-form-input" placeholder="Напишите комментарий"   cols="30" rows="6"></textarea>
+                                <div class="comments__message-form-buffer"></div>
+                                <button type="submit" title="Отправить" class="comments__message-form-submit"><i
                                         class="icon icon--message-submit"></i></button>
                             </label>
 
@@ -193,12 +193,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="comments__massage">
-                        <form action="" class="comments__massage-form">
+                    <div class="comments__message">
+                        <form action="" class="comments__message-form">
                             <label class="fields">
-                <textarea class="fields__input comments__massage-form-input" placeholder="Напишите комментарий" cols="30" rows="6"></textarea>
-                                <div class="comments__massage-form-buffer"></div>
-                                <button type="submit" title="Отправить" class="comments__massage-form-submit"><i
+                <textarea class="fields__input comments__message-form-input" placeholder="Напишите комментарий" cols="30" rows="6"></textarea>
+                                <div class="comments__message-form-buffer"></div>
+                                <button type="submit" title="Отправить" class="comments__message-form-submit"><i
                                         class="icon icon--message-submit"></i></button>
                             </label>
 
@@ -240,12 +240,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="comments__massage">
-                        <form action="" class="comments__massage-form">
+                    <div class="comments__message">
+                        <form action="" class="comments__message-form">
                             <label class="fields">
-                <textarea class="fields__input comments__massage-form-input" placeholder="Напишите комментарий" cols="30" rows="6"></textarea>
-                                <div class="comments__massage-form-buffer"></div>
-                                <button type="submit" title="Отправить" class="comments__massage-form-submit"><i
+                <textarea class="fields__input comments__message-form-input" placeholder="Напишите комментарий" cols="30" rows="6"></textarea>
+                                <div class="comments__message-form-buffer"></div>
+                                <button type="submit" title="Отправить" class="comments__message-form-submit"><i
                                         class="icon icon--message-submit"></i></button>
                             </label>
 
@@ -287,12 +287,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="comments__massage">
-                        <form action="" class="comments__massage-form">
+                    <div class="comments__message">
+                        <form action="" class="comments__message-form">
                             <label class="fields">
-                <textarea class="fields__input comments__massage-form-input" placeholder="Напишите комментарий" cols="30" rows="6"></textarea>
-                                <div class="comments__massage-form-buffer"></div>
-                                <button type="submit" title="Отправить" class="comments__massage-form-submit"><i
+                <textarea class="fields__input comments__message-form-input" placeholder="Напишите комментарий" cols="30" rows="6"></textarea>
+                                <div class="comments__message-form-buffer"></div>
+                                <button type="submit" title="Отправить" class="comments__message-form-submit"><i
                                         class="icon icon--message-submit"></i></button>
                             </label>
 
@@ -336,12 +336,12 @@
                     </div>
                 </div>
             </div>
-            <div class="comments__massage">
-                <form action="" class="comments__massage-form">
+            <div class="comments__message">
+                <form action="" class="comments__message-form">
                     <label class="fields">
-                <textarea class="fields__input comments__massage-form-input" placeholder="Напишите комментарий" cols="30" rows="6"></textarea>
-                        <div class="comments__massage-form-buffer"></div>
-                        <button type="submit" title="Отправить" class="comments__massage-form-submit"><i
+                <textarea class="fields__input comments__message-form-input" placeholder="Напишите комментарий" cols="30" rows="6"></textarea>
+                        <div class="comments__message-form-buffer"></div>
+                        <button type="submit" title="Отправить" class="comments__message-form-submit"><i
                                 class="icon icon--message-submit"></i></button>
                     </label>
 
