adaptive informations systems

--- a/src/blocks/modules/information-systems-search/information-systems-search.html
+++ b/src/blocks/modules/information-systems-search/information-systems-search.html
@@ -1,7 +1,9 @@
 <div class="search js-search">
 	<form action="#0">
 		<input type="text" placeholder="Найти систему или сервис" class="search__input js-search__input">
-		<div class="search-dropdown js-search-dropdown">
+        <div class="search-shade js-search-shade"></div>
+        <button type="button" class="search-close js-search-close"></button>
+        <div class="search-dropdown js-search-dropdown">
 			<ul class="search-dropdown__list">
 				<li>
 					<h3 class="search-dropdown__title">Вы недавно искали:</h3>
